# PyliteDB

./: .gitignore  Database  Database.db  Database.pylite  LICENSE  README.md  Setup.py  db.pylite  helper.py  pyproject.toml
Pylite/: Column.py  Database.py  Table.py  Types.py  __init__.py  pyColumn.py  pyDatabase.py  pyTable.py  pyTools.py  pylite.py
Pylite/pyTypes/: Blob.py  Email.py  Image.py  __init__.py
PyliteBrowser/: Server.py  main.js  package-lock.json  package.json
PyliteBrowser/Assets/CSS/: Fonts.css
PyliteBrowser/View/: Main.html
PyliteBrowser/View/Components/: Navbar.html
Tests/: Test.ilies.py  Test.py
Tests/Samples/: test.json
src/Pylite/: Column.py  Database.py  Table.py  Tools.py  TypeHelpers.py  Types.py  __init__.py
tests/: test.py
