[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyliteDB"
version = "0.1.5"
authors = [
  { name="Ilify", email="iliesmraihia@gmail.com" },
]
description = "PyliteDB"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ilify/Pylite"
Issues = "https://github.com/ilify/Pylite/issues"