[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyliteDB"
version = "0.4.1"
authors = [
  { name="Ilify", email="iliesmraihia@gmail.com" },
]
description = "PyliteDB is a lightweight, fast and simple database management system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas","faker","cryptography","dill"]

[project.urls]
Homepage = "https://github.com/ilify/Pylite"
Issues = "https://github.com/ilify/Pylite/issues"